# OViewerUI

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
Core/: CMakeLists.txt
Core/include/: EventData.h  EventId.h  EventMacro.h  EventObject.h  IEventListener.h  IEventObserver.h  IWindow.hpp  Log.h  UIObject.h  dummy.h
Core/src/: IWindow.cpp  UIObject.cpp  dummy.cpp
GL/: CMakeLists.txt
GL/include/: Actor.h  GLExport.h  Mapper.h  OpenGLContext.hpp  RenderContext.hpp  Renderer.h  UIContext.hpp
GL/src/: Actor.cpp  Mapper.cpp  OpenGLContext.cpp  Renderer.cpp  UIContext.cpp
Test/: CMakeLists.txt  main.cpp  test.frag  test.vert
Widgets/: CMakeLists.txt
Widgets/include/: AbstractPropertiesWidget.h  AppEvent.h  AppEventData.h  Application.hpp  DataManagerWidget.h  ImageNavigatorWidget.h  ImagePropertiesWidget.h  LogWidget.h  MenuBar.h  MouseEvent.h  MouseEventData.h  OpenGLViewerWidget.h  OpenGLWindow.hpp  PixelValueWidget.h  RenderEvent.h  RenderEventData.h  SceneView.hpp  Widget.h  WidgetEvent.h  WidgetEventData.h
Widgets/src/: Application.cpp  DataManagerWidget.cpp  ImageNavigatorWidget.cpp  ImagePropertiesWidget.cpp  LogWidget.cpp  MenuBar.cpp  OpenGLViewerWidget.cpp  OpenGLWindow.cpp  PixelValueWidget.cpp  SceneView.cpp
docs/: 事件交互设计模式.md
